--- a/src/app/realty/realty-favorite-list/realty-favorite-list.component.html
+++ b/src/app/realty/realty-favorite-list/realty-favorite-list.component.html
@@ -1,9 +1,9 @@
 <div id="favorite-realty">
   <div class="header mat-primary-bg p-24 h-100 " fxLayout="row" fxLayoutAlign="space-between center">
-    <div class="h2">Favorite Realty</div>
+    <div class="h2">{{'favoriteRealty.title' | translate}}</div>
   </div>
   <div fxLayoutAlign="space-between" id="realty-container">
-    <div class="realty-container card"  fxLayout="row wrap" fxLayoutAlign.xs="center" fxLayoutAlign="space-around"
+    <div class="realty-container card" fxLayout="row wrap" fxLayoutAlign.xs="center"
          infiniteScroll
          [infiniteScrollDistance]="1"
          [infiniteScrollThrottle]="50"
