--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -10,7 +10,7 @@
 
             <div class="title">  {{'auth.forgotPassword.recoverPassword' | translate}}</div>
 
-            <form name="forgotPasswordForm" [formGroup]="forgotPasswordForm" novalidate>
+            <form name="forgotPasswordForm" [formGroup]="forgotPasswordForm" novalidate (submit)="resetPassword()" >
 
                 <mat-form-field>
                     <input matInput placeholder="Email" formControlName="email">
