--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -17,6 +17,9 @@
                     <mat-error *ngIf="forgotPasswordForm.get('email').hasError('required')">
                         Email {{'validation.required' | translate}}
                     </mat-error>
+                  <mat-error *ngIf="forgotPasswordForm.get('email').hasError('invalid')">
+                    {{errors?.email}}
+                  </mat-error>
                     <mat-error *ngIf="forgotPasswordForm.get('email').hasError('email')">
                       {{'validation.emailAddress' | translate}}
                     </mat-error>
