--- a/src/app/realty/realty-filter/realty-filter.component.html
+++ b/src/app/realty/realty-filter/realty-filter.component.html
@@ -41,9 +41,9 @@
       </mat-form-field>
     </div>
     <div class="form-control" fxLayout="row" fxLayoutAlign="space-between center">
-      <span>{{'realty.fields.area' | translate}}:</span>
+      <span>{{'realty.fields.floor' | translate}}:</span>
       <mat-form-field fxFlex="60" fxFlex.lt-sm="100" fxLayoutAlign="center" fxLayout="column">
-        <input matInput type="number" min="1" max="1000" formControlName="area">
+        <input matInput type="number" min="1" max="100" formControlName="floor">
       </mat-form-field>
     </div>
     <div class="form-control mb-20" fxLayout="row" fxLayoutAlign="space-around center">
