--- a/src/app/users/users.component.scss
+++ b/src/app/users/users.component.scss
@@ -12,14 +12,14 @@
   }
 }
 
-::ng-deep .mat-focused .mat-form-field-label {
-  /*change color of label*/
-  color: #fff !important;
-}
-
-::ng-deep .mat-focused .mat-form-field-underline .mat-form-field-ripple {
-  background: #fff;
-}
+//::ng-deep .mat-focused .mat-form-field-label {
+//  /*change color of label*/
+//  color: #fff !important;
+//}
+//
+//::ng-deep .mat-focused .mat-form-field-underline .mat-form-field-ripple {
+//  background: #fff;
+//}
 
 .users-list {
   max-width: 920px;
