--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -36,7 +36,7 @@
 
             <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
 
-                <button mat-menu-item [routerLink]="['/profile']">
+              <button mat-menu-item [routerLink]="['/profile/'+profile?.id]">
                     <mat-icon>account_circle</mat-icon>
                     <span>{{'layout.toolbar.menu.profile' | translate}}</span>
                 </button>
