--- a/src/app/profile/tabs/about/about.component.html
+++ b/src/app/profile/tabs/about/about.component.html
@@ -1,32 +1,42 @@
-<div id="about" class="p-24" fxLayout="row wrap" *ngIf="profile$|async as profile">
-    <div class="about-content" fxLayout="column" fxFlex="100" fxFlex.gt-sm="50" fxFlex.gt-md="65">
-
-        <div class="profile-box info-box general" fxLayout="column">
+<div id="about" class="p-24" fxLayout="row wrap" *ngIf="profile">
+  <div class="about-content" fxLayout="column" fxFlex="100">
+    <mat-tab-group>
+      <mat-tab [label]="'profile.about.about' | translate">
+        <div class="profile-box info-box general " fxLayout="column" fxFlex.gt-sm="50" fxFlex.gt-md="65">
 
             <header class="mat-primary-bg" fxLayout="row" fxLayoutAlign="space-between center" >
-                <div class="title">{{'profile.about.generalInfo' | translate}}</div>
-                <button mat-raised-button class="btn-orange" [routerLink]="['edit']">{{'profile.about.edit' | translate}}</button>
+              <div class="title">{{'profile.about.generalInfo' | translate}}</div>
+              <button mat-raised-button class="btn-orange"
+                      [routerLink]="['edit/'+profile.id]">{{'profile.about.edit' | translate}}</button>
             </header>
 
             <div class="content">
-                <div class="info-line">
-                    <div class="title">{{'profile.fields.gender' | translate}}</div>
-                    <div class="info">{{profile?.gender}}</div>
-                </div>
+              <div class="info-line">
+                <div class="title">{{'profile.fields.gender' | translate}}</div>
+                <div class="info">{{profile?.gender}}</div>
+              </div>
 
-                <div class="info-line">
-                    <div class="title">{{'profile.fields.birthday' | translate}}</div>
-                    <div class="info">{{profile?.birthDate}}</div>
-                </div>
-                <div class="info-line">
-                    <div class="title">Email</div>
-                    <div class="info">{{profile?.email}}</div>
-                </div>
+              <div class="info-line">
+                <div class="title">{{'profile.fields.birthday' | translate}}</div>
+                <div class="info">{{profile?.birthDate}}</div>
+              </div>
+              <div class="info-line">
+                <div class="title">Email</div>
+                <div class="info">{{profile?.email}}</div>
+              </div>
               <div class="info-line">
                 <div class="title">{{'profile.fields.phone' | translate}}</div>
                 <div class="info">{{profile?.phone}}</div>
               </div>
             </div>
         </div>
-    </div>
+      </mat-tab>
+      <mat-tab [label]="'profile.about.realty' | translate">
+        <div class="users-realty" fxLayout="row wrap" fxLayoutAlign="space-around">
+          <app-realty *ngFor="let realty of realty" [realty]="realty"></app-realty>
+        </div>
+      </mat-tab>
+    </mat-tab-group>
+
+  </div>
 </div>
