--- a/src/app/users/users.component.scss
+++ b/src/app/users/users.component.scss
@@ -11,15 +11,7 @@
     }
   }
 }
-
-//::ng-deep .mat-focused .mat-form-field-label {
-//  /*change color of label*/
-//  color: #fff !important;
-//}
-//
-//::ng-deep .mat-focused .mat-form-field-underline .mat-form-field-ripple {
-//  background: #fff;
-//}
+.mat-focused .mat-form-field-label{ color: #ee6e73; } .mat-focused .mat-form-field-underline .mat-form-field-ripple{ background: #ee6e73; }
 
 .users-list {
   max-width: 920px;
