--- a/src/app/shared/realty/realty.component.scss
+++ b/src/app/shared/realty/realty.component.scss
@@ -3,6 +3,14 @@
   color: orange;
 }
 
+.text-ellipsis{
+  -ms-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+
 .price {
   font-weight: bold;
   font-size: 24px;
@@ -84,6 +92,39 @@
 
 
 .fuse-card img {
-  width: 320px;
+  width: 380px;
   height: 200px;
+}
+
+.fuse-card {
+  position: relative;
+  min-width: 380px!important;
+  max-width: 380px!important;
+}
+
+@media only screen and (max-width: 768px) {
+  .fuse-card img {
+    width: 320px;
+    height: 240px;
+  }
+
+  .fuse-card {
+    position: relative;
+    min-width: 320px!important;
+    max-width: 320px!important;
+  }
+}
+
+@media only screen and (max-width: 370px) {
+  .fuse-card img {
+    width: 280px;
+    height: 200px;
+  }
+
+  .fuse-card {
+    position: relative;
+    min-width: 280px!important;
+    max-width: 290px!important;
+    margin: 15px 0px 15px 13px!important;
+  }
 }
