--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,10 +2,10 @@
 
     <!-- HEADER -->
     <div class="header p-24" fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-sm="row"
-         fxLayoutAlign.gt-sm="space-between end">
+         fxLayoutAlign.gt-sm="space-between center">
 
         <div class="user-info" fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-sm="row"
-             fxLayoutAlign.gt-sm="start center">
+             fxLayoutAlign.gt-sm="center center">
           <div class="profile-picture">
             <img class="profile-image avatar huge" [src]="profile?.image || 'assets/images/default-avatar.svg'"
                  [@animate]="{value:'*',params:{delay:'50ms',scale:'0.2'}}">
