add share functionality

--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -67,7 +67,7 @@
             <div class="toolbar-separator"></div>
 
             <div class="toolbar-separator"></div>
-          <button mat-button fxHide fxShow.gt-xs
+          <button mat-button
                   class="language-button"
                   [matMenuTriggerFor]="languageMenu">
             <div fxLayout="row" fxLayoutAlign="center center">
