--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -45,17 +45,17 @@
 
             </form>
 
-            <div class="separator">
-                <span class="text">{{'auth.signIn.or' | translate}}</span>
-            </div>
+          <!--            <div class="separator">-->
+          <!--                <span class="text">{{'auth.signIn.or' | translate}}</span>-->
+          <!--            </div>-->
 
-            <button mat-raised-button class="google">
-                {{'auth.signIn.loginWith' | translate}} Google
-            </button>
+          <!--            <button mat-raised-button class="google">-->
+          <!--                {{'auth.signIn.loginWith' | translate}} Google-->
+          <!--            </button>-->
 
-            <button mat-raised-button class="facebook">
-              {{'auth.signIn.loginWith' | translate}} Facebook
-            </button>
+          <!--            <button mat-raised-button class="facebook">-->
+          <!--              {{'auth.signIn.loginWith' | translate}} Facebook-->
+          <!--            </button>-->
 
             <div class="register" fxLayout="column" fxLayoutAlign="center center">
                 <span class="text">{{'auth.signIn.noAccount' | translate}}?</span>
