--- a/src/app/profile/tabs/about/about.component.html
+++ b/src/app/profile/tabs/about/about.component.html
@@ -31,9 +31,10 @@
             </div>
         </div>
       </mat-tab>
-      <mat-tab [label]="'profile.about.realty' | translate">
+      <mat-tab [label]="'profile.about.realty' | translate" *ngIf="isCurrentUserProfile">
         <div class="users-realty" fxLayout="row wrap">
-          <app-realty *ngFor="let realty of realty" [realty]="realty"></app-realty>
+          <app-realty *ngFor="let realty of realty" [realty]="realty" (onAddToFavorite)="addToFavorite($event)"
+                      (onRemoveFromFavorite)="removeFromFavorite($event)"></app-realty>
         </div>
       </mat-tab>
     </mat-tab-group>
